Add begin and total default value and add add it to swager.json
